<resources>
    <string name="app_name">App_AgroTech</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">AGRO TECH</string>
    <string name="nav_header_subtitle">agrotech.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Agregar Parcela</string>
    <string name="VerParcela">Ver Parcela</string>
    <string name="agregar_aji">Agregar Aji</string>
    <string name="ver_aji">Ver Aji</string>
    <string name="temporada">Temporada</string>
    <string name="tratamiento">Tratamiento</string>
    <string name="profile">Perfil</string>
    <string name="descrip_text">El aji se sembró en plantines</string>
</resources>